hacky fix to align text

--- a/src/components/HomePage/ProductShowcase/ProductShowcase.module.scss
+++ b/src/components/HomePage/ProductShowcase/ProductShowcase.module.scss
@@ -22,8 +22,9 @@
 
 .price {
   @extend .h5;
-  @extend .align-middle;
-  float: left;
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
 }
 
 .cardBottom {
